--- a/config/routes/framework.yaml
+++ b/config/routes/framework.yaml
@@ -2,3 +2,7 @@ when@dev:
     _errors:
         resource: '@FrameworkBundle/Resources/config/routing/errors.php'
         prefix: /_error
+
+controllers:
+    resource: ../../src/Controller/
+    type: attribute
