--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,3 +1,6 @@
+parameters:
+    app.data_dir: '%kernel.project_dir%/var/data'
+
 services:
     _defaults:
         autowire: true
@@ -12,8 +15,8 @@ services:
 
     App\Service\CsvHouseService:
         arguments:
-            $dataDir: '%kernel.project_dir%/src/Service/data'
+            $dataDir: '%app.data_dir%'
 
     App\Service\CsvBookingService:
         arguments:
-            $dataDir: '%kernel.project_dir%/src/Service/data'
+            $dataDir: '%app.data_dir%'
