--- a/composer.json
+++ b/composer.json
@@ -100,12 +100,15 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.89",
         "phpunit/phpunit": "^12.4",
+        "squizlabs/php_codesniffer": "*",
         "symfony/browser-kit": "7.3.*",
         "symfony/css-selector": "7.3.*",
         "symfony/debug-bundle": "7.3.*",
         "symfony/maker-bundle": "^1.0",
         "symfony/stopwatch": "7.3.*",
-        "symfony/web-profiler-bundle": "7.3.*"
+        "symfony/web-profiler-bundle": "7.3.*",
+        "vimeo/psalm": "^6.13"
     }
 }
