--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "doctrine/dbal": "^3.10.3",
         "doctrine/doctrine-bundle": "^2.18.1",
         "doctrine/doctrine-migrations-bundle": "^3.6",
-        "doctrine/orm": "^3.5.7",
+        "doctrine/orm": "^3.5",
+        "easycorp/easyadmin-bundle": "*",
         "phpdocumentor/reflection-docblock": "^5.6.3",
         "phpstan/phpdoc-parser": "^2.3",
         "symfony/asset": "7.3.*",
